--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
     <meta name="keywords" content="gym importance, benefits of gym, fitness, health, workout routine, exercise">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5;
             margin: 0;
             padding: 0;
-            background: #f8f9fa;
             color: #333;
         }
         .container {
-            max-width: 960px;
-            margin: auto;
-            padding: 20px;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 30px 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0,0,0,0.05);
             border-radius: 8px;
         }
         h1, h2, h3 {
             color: #2c3e50;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 20px 0;
+            border-radius: 10px;
         }
         a {
             color: #007bff;
@@ -46,7 +49,7 @@
         }
         @media (max-width: 768px) {
             .container {
-                padding: 10px;
+                padding: 15px;
             }
         }
     </style>
@@ -54,7 +57,7 @@
 <body>
     <div class="container">
         <h1>Why Going to the Gym Is Important</h1>
-        <img src="https://www.verywellfit.com/thmb/2W93Eg_cIGCkQFFz6iEpY1a13Zc=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-1177323713-0d85a291395c4f3bb4fffdc6807b5b02.jpg" alt="Man lifting weights at the gym">
+        <img src="https://cdn.pixabay.com/photo/2017/03/02/02/14/people-2110767_1280.jpg" alt="Group workout at the gym">
 
         <p>In today’s fast-paced world, where sedentary lifestyles have become common, the importance of going to the gym cannot be overstated. Incorporating regular physical activity into your routine is not just about appearance—it’s about improving your overall well-being.</p>
 
@@ -63,6 +66,8 @@
 
         <h3>Boosting Immune System</h3>
         <p>Exercise increases circulation, which allows immune cells to travel more efficiently through your body. A consistent gym routine can make you less susceptible to common illnesses.</p>
+
+        <img src="https://cdn.pixabay.com/photo/2016/11/21/12/59/athlete-1844796_1280.jpg" alt="Man lifting dumbbells in the gym">
 
         <h2>2. Mental Health Advantages</h2>
         <p>Going to the gym releases endorphins—natural mood boosters. It reduces symptoms of depression, anxiety, and stress. For many, a workout is an escape from the pressures of everyday life.</p>
@@ -75,6 +80,8 @@
 
         <h2>4. Routine and Discipline</h2>
         <p>Establishing a regular gym schedule teaches discipline, time management, and self-control—skills that benefit every area of life.</p>
+
+        <img src="https://cdn.pixabay.com/photo/2017/03/01/08/34/exercise-2101941_1280.jpg" alt="Women doing strength training at gym">
 
         <h2>Conclusion</h2>
         <p>Joining a gym is not just a fitness trend—it’s an investment in your long-term health. Whether you’re aiming to get fit, relieve stress, or build confidence, the gym provides the tools and environment to help you succeed.</p>
