--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1DQSL0057G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google Analytics Tag -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1DQSL0057G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-1DQSL0057G');
+    </script>
 
-  gtag('config', 'G-1DQSL0057G');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why Going to the Gym Is Important | Health & Fitness Tips</title>
     <meta name="description" content="Discover the top benefits of going to the gym and how regular workouts improve physical and mental health.">
     <meta name="keywords" content="gym importance, benefits of gym, fitness, health, workout routine, exercise">
+
+    <!-- ✅ Working CSS -->
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
             margin: 0;
             padding: 0;
             color: #333;
         }
         .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 30px 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.05);
+            max-width: 960px;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #ffffff;
             border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
             color: #2c3e50;
+        }
+        p {
+            font-size: 16px;
+            line-height: 1.7;
         }
         img {
             max-width: 100%;
@@ -57,6 +63,7 @@
 <body>
     <div class="container">
         <h1>Why Going to the Gym Is Important</h1>
+        
         <img src="https://cdn.pixabay.com/photo/2017/03/02/02/14/people-2110767_1280.jpg" alt="Group workout at the gym">
 
         <p>In today’s fast-paced world, where sedentary lifestyles have become common, the importance of going to the gym cannot be overstated. Incorporating regular physical activity into your routine is not just about appearance—it’s about improving your overall well-being.</p>
@@ -65,29 +72,4 @@
         <p>Working out at the gym strengthens muscles, improves cardiovascular health, and increases stamina. Strength training and cardio routines can help manage weight, reduce the risk of chronic diseases such as diabetes and heart disease, and improve flexibility.</p>
 
         <h3>Boosting Immune System</h3>
-        <p>Exercise increases circulation, which allows immune cells to travel more efficiently through your body. A consistent gym routine can make you less susceptible to common illnesses.</p>
-
-        <img src="https://cdn.pixabay.com/photo/2016/11/21/12/59/athlete-1844796_1280.jpg" alt="Man lifting dumbbells in the gym">
-
-        <h2>2. Mental Health Advantages</h2>
-        <p>Going to the gym releases endorphins—natural mood boosters. It reduces symptoms of depression, anxiety, and stress. For many, a workout is an escape from the pressures of everyday life.</p>
-
-        <h3>Improved Sleep and Focus</h3>
-        <p>Regular gym-goers often report better sleep quality and sharper focus throughout the day, leading to improved productivity at work or school.</p>
-
-        <h2>3. Social and Motivational Boost</h2>
-        <p>Gyms are social spaces where people share goals and encourage one another. Being part of a fitness community can push you to stay committed and celebrate progress together.</p>
-
-        <h2>4. Routine and Discipline</h2>
-        <p>Establishing a regular gym schedule teaches discipline, time management, and self-control—skills that benefit every area of life.</p>
-
-        <img src="https://cdn.pixabay.com/photo/2017/03/01/08/34/exercise-2101941_1280.jpg" alt="Women doing strength training at gym">
-
-        <h2>Conclusion</h2>
-        <p>Joining a gym is not just a fitness trend—it’s an investment in your long-term health. Whether you’re aiming to get fit, relieve stress, or build confidence, the gym provides the tools and environment to help you succeed.</p>
-
-        <p>For more health tips, visit <a href="https://www.healthline.com/health/fitness-exercise-benefits" target="_blank">Healthline’s guide on fitness benefits</a>.</p>
-        <p>Check out our <a href="/blog/healthy-living-tips">Healthy Living Tips</a> for more wellness articles.</p>
-    </div>
-</body>
-</html>
+        <p>Exercise increases circulation, which allows immune cells to travel more efficiently through your body. A consistent gym routine can make you less susceptible to common il
